# AutoFeur

./: .gitignore  LICENCE  README.md  docker-compose.yaml  package.json  tsconfig.json
autofeur-nova/: .gitignore  Dockerfile  data.json  package-lock.json  package.json
autofeur-nova/src/: algo.mts  index.mts  preprocess.mts
autofeur-nova/src/sys/events/: client.mts  index.mts  transport.mts
autofeur-nova/src/sys/handler/: builder.mts  index.mts
autofeur_db/: Cargo.toml  Dockerfile
autofeur_db/src/: french_ipa.rs  inference.rs  lib.rs  save.rs  trie.rs
autofeur_nova/: .dockerignore  .gitignore  Dockerfile  data.json  package.json  tsconfig.json
autofeur_nova/config/: default.example.yml
autofeur_nova/src/: algo.mts  index.mts  phonemizelib.mts  preprocess.mts
config/: default.example.yml
deep_phonemizer/: .dockerignore  .gitignore  Dockerfile  app.py  requirements.txt
discordjs/: .gitignore  Dockerfile  package-lock.json  package.json
discordjs/src/: index.mjs
src/: index.ts  register.ts  rest.ts
src/commands/: index.ts  loveCalculator.ts  ping.ts
src/events/: client.ts  event-emitter.ts  transport.ts
src/handler/: builder.ts  index.ts
src/sys/events/: client.ts  transport.ts
src/sys/handler/: builder.ts  index.ts
