[package]
name = "autofeur"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trie-rs = "0.1.1"
csv = "1.1.6"
unicode-segmentation = "1.10.0"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
bincode = "1.3.3"

tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.3.5", features = ["full"] }
hyper = { version = "0.14.23", features = ["server"] }
tokio = { version = "1.24.2", features = ["full"] }
reqwest = "0.11.14"
kdam = { version = "0.3", features = ["gradient", "template"] }
anyhow = "1.0.68"
itertools = "0.10.5"
querystring = "1.1.0"
levenshtein = "1.0.5"

[[bin]]
name = "generate"

[[bin]]
name = "server"